# TDPU

./: CLAUDE.md  README.md  clean_zone_files.sh  quick_test.py  复旦微集创赛题.md  集创方案.md
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/agents/: Expert of FPAI.agent.md
Icraft文档/: 1_Start_Compilation.md  1_Start_Running.md  2_Interface_APIs.md  2_Interface_CLI.md  3_Component_overview.md
Icraft文档/component/CLI/: 3_Component_CLI.md
Icraft文档/component/XIR/: 3_Component_XIR.md  genindex.md
Icraft文档/component/XIR/_autosummary/: xir.md
Icraft文档/component/XIR/_cppapi/: api_root.md  classicraft_1_1xir_1_1_a_cos.md  classicraft_1_1xir_1_1_a_cos_node.md  classicraft_1_1xir_1_1_a_cosh.md  classicraft_1_1xir_1_1_a_cosh_node.md  classicraft_1_1xir_1_1_a_sin.md  classicraft_1_1xir_1_1_a_sin_node.md  classicraft_1_1xir_1_1_a_sinh.md  classicraft_1_1xir_1_1_a_sinh_node.md  classicraft_1_1xir_1_1_a_tan.md  classicraft_1_1xir_1_1_a_tan_node.md  classicraft_1_1xir_1_1_a_tanh.md  classicraft_1_1xir_1_1_a_tanh_node.md  classicraft_1_1xir_1_1_abs.md  classicraft_1_1xir_1_1_abs_node.md  (+2749 more)
Icraft文档/component/XRT/: 3_Component_XRT.md  genindex.md  py-modindex.md  py_api.md
Icraft文档/component/adapt/: 3_Component_adapt.md
Icraft文档/component/buyibackend/: 3_Component_buyibackend.md  genindex.md  index.md  search.md
Icraft文档/component/codegen/: 3_Component_codegen.md
Icraft文档/component/hostbackend/: 3_Component_hostbackend.md  genindex.md  index.md  py-modindex.md  py_api.md  search.md
Icraft文档/component/parse/: 3_Component_parse.md  genindex.md
Icraft文档/component/quantizer/: 3_Component_quantizer.md  genindex.md
Icraft文档/component/run/: 3_Component_run.md
Icraft文档/component/utils/: 3_Component_Utils.md  genindex.md
Icraft文档/component/zg330backend/: 3_Component_zg330backend.md  genindex.md  index.md  search.md
Icraft文档/extensibility/: customop.md
Icraft文档/extensibility/others/: layout.md
TDPU/: package_def.sv  sim_main.cpp  vec_multi_core.sv  waveform.vcd
TDPU/obj_dir/: Vvec_multi_core  Vvec_multi_core.cpp  Vvec_multi_core.h  Vvec_multi_core.mk  Vvec_multi_core__ALL.cpp  Vvec_multi_core__ALL.d  Vvec_multi_core__Syms.h  Vvec_multi_core__Syms__Slow.cpp  Vvec_multi_core__TraceDecls__0__Slow.cpp  Vvec_multi_core__Trace__0.cpp  Vvec_multi_core__Trace__0__Slow.cpp  Vvec_multi_core___024root.h  Vvec_multi_core___024root__0.cpp  Vvec_multi_core___024root__0__Slow.cpp  Vvec_multi_core___024root__Slow.cpp  Vvec_multi_core___024unit.h  Vvec_multi_core___024unit__0__Slow.cpp  Vvec_multi_core___024unit__Slow.cpp  Vvec_multi_core__pch.h  Vvec_multi_core__ver.d  Vvec_multi_core_classes.mk  sim_main.d
TDPU_upgrade/: run_sim.sh  vec_multi_core.sv
icraft_plugin/: CMakeLists.txt
icraft_plugin/config/: bitlinear_test.toml
icraft_plugin/include/: bitlinear_op.h
icraft_plugin/src/: bitlinear_host_forward.cpp  bitlinear_op.cpp  bitlinear_pass.cpp
icraft_plugin/test/: test_bitlinear.cpp  test_real_weights.cpp
models/: .gitignore  export_single_layer.py  extract_weights.py
models/microsoftbitnet_b1.58_2B_4T/: _inspect_weights.py  analysis_report.md  analysis_report.txt  analyze_safetensors.py  data_summary_card.md  transfer_safetensors2onnx.py
models/output/: single_layer_bitlinear.onnx
plan/: PHASE_3_5_SUMMARY.md  PHASE_3_FULL_MODEL_PLAN.md  PHASE_4_VIVADO_PLANNING.md  flickering-jumping-frost.md
(+555 files in other folders)
